add css folder and stlyles.css file

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,10 @@
         <ul class="portfolio__projects projects">
           <li class="projects__item project">
             <img src="./images/project--1.jpg" alt="Project foto" class="project__image">
-            <h3 class="project__title">Технокряк</h3>
-            <p class="project__category">Веб-сайт</p>
+            <div class="project__content">
+              <h3 class="project__title">Технокряк</h3>
+              <p class="project__category">Веб-сайт</p>
+            </div>
           </li>
           <li class="projects__item project">
             <img src="./images/project--2.jpg" alt="Project foto" class="project__image">
