--- a/index.html
+++ b/index.html
@@ -4,31 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 2</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <a href="/" class="logo">WebStudio</a>
-
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">Студія</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Портфоліо</a>
-          </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="contacts">
-        <a href="mailto:info@devstudio.com" class="contacts__link"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="contacts__link">+38 096 111 11 11</a>
+      <div class="container">
+        <div class="header__content">
+          <a href="/" class="logo header__logo">
+            <span class="logo__web"> Web </span>
+            Studio
+          </a>
+  
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">Студія</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Портфоліо</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+  
+          <div class="contacts header__contacts">
+            <a href="mailto:info@devstudio.com" class="contacts__link"
+              >info@devstudio.com</a
+            >
+            <a href="tel:+380961111111" class="contacts__link"
+              >+38 096 111 11 11</a
+            >
+          </div>
+        </div>
       </div>
     </header>
 
