--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="logo__web"> Web </span>
             Studio
           </a>
-  
+
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
@@ -34,7 +34,7 @@
               </li>
             </ul>
           </nav>
-  
+
           <div class="contacts header__contacts">
             <a href="mailto:info@devstudio.com" class="contacts__link"
               >info@devstudio.com</a
@@ -55,102 +55,115 @@
       </section>
 
       <section class="features">
-        <ul class="features__list">
-          <li class="features__item">
-            <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="features__text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li class="features__item">
-            <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="features__text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="features__item">
-            <h3 class="features__title">ПЛАНУВАННЯ</h3>
-            <p class="features__text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="features__item">
-            <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="features__text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="features__list">
+            <li class="features__item">
+              <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features__text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features__text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">ПЛАНУВАННЯ</h3>
+              <p class="features__text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features__text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="services">
-        <h2 class="services__title">Чим ми займаємося</h2>
-        <ul class="services__list">
-          <li class="services__item">
-            <img
-              src="./images/services--1.jpg"
-              alt="services--1"
-              class="services__image"
-            />
-          </li>
-          <li class="services__item">
-            <img
-              src="./images/services--2.jpg"
-              alt="services--2"
-              class="services__image"
-            />
-          </li>
-          <li class="services__item">
-            <img
-              src="./images/services--3.jpg"
-              alt="services--3"
-              class="services__image"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="services__title">Чим ми займаємося</h2>
+          <ul class="services__list">
+            <li class="services__item">
+              <img
+                src="./images/services--1.jpg"
+                alt="services--1"
+                class="services__image"
+              />
+            </li>
+            <li class="services__item">
+              <img
+                src="./images/services--2.jpg"
+                alt="services--2"
+                class="services__image"
+              />
+            </li>
+            <li class="services__item">
+              <img
+                src="./images/services--3.jpg"
+                alt="services--3"
+                class="services__image"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team__title">Наша команда</h2>
-        <ul class="team__list">
-          <li class="team__item person">
-            <img src="./images/team-1.jpg" alt="team-1" class="team__image" />
-            <h3 class="person__name">Ігор Дем'яненко</h3>
-            <p class="person__role">Product Designer</p>
-          </li>
-          <li class="team__item person">
-            <img src="./images/team-2.jpg" alt="team-2" class="team__image" />
-            <h3 class="person__name">Ольга Рєпіна</h3>
-            <p class="person__role">Frontend Developer</p>
-          </li>
-          <li class="team__item person">
-            <img src="./images/team-3.jpg" alt="team-3" class="team__image" />
-            <h3 class="person__name">Микола Тарасов</h3>
-            <p class="person__role">Marketing</p>
-          </li>
-          <li class="team__item person">
-            <img src="./images/team-4.jpg" alt="team-4" class="team__image" />
-            <h3 class="person__name">Михайло Єрмаков</h3>
-            <p class="person__role">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="team__list">
+            <li class="team__item person">
+              <img src="./images/team-1.jpg" alt="team-1" class="team__image" />
+              <h3 class="person__name">Ігор Дем'яненко</h3>
+              <p class="person__role">Product Designer</p>
+            </li>
+            <li class="team__item person">
+              <img src="./images/team-2.jpg" alt="team-2" class="team__image" />
+              <h3 class="person__name">Ольга Рєпіна</h3>
+              <p class="person__role">Frontend Developer</p>
+            </li>
+            <li class="team__item person">
+              <img src="./images/team-3.jpg" alt="team-3" class="team__image" />
+              <h3 class="person__name">Микола Тарасов</h3>
+              <p class="person__role">Marketing</p>
+            </li>
+            <li class="team__item person">
+              <img src="./images/team-4.jpg" alt="team-4" class="team__image" />
+              <h3 class="person__name">Михайло Єрмаков</h3>
+              <p class="person__role">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="/" class="logo">WebStudio</a>
-      <div class="contacts footer__contacts">
-        <address class="contacts__address">
-          м. Київ, пр-т Лесі Українки, 26
-        </address>
-        <a href="mailto:info@devstudio.com" class="contacts__email"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="contacts__link">
-          +38 096 111 11 11
-        </a>
+      <div class="container">
+        <div class="footer__content">
+          <a href="/" class="logo footer__logo">
+            <span class="logo__web">Web</span>
+            Studio
+          </a>
+          <div class="contacts footer__contacts">
+            <address class="contacts__address">
+              м. Київ, пр-т Лесі Українки, 26
+            </address>
+            <a href="mailto:info@devstudio.com" class="contacts__email"
+              >info@devstudio.com</a
+            >
+            <a href="tel:+380961111111" class="contacts__link">
+              +38 096 111 11 11
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
