--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
           </nav>
 
           <div class="contacts header__contacts">
-            <a href="mailto:info@devstudio.com" class="contacts__link"
-              >info@devstudio.com</a
-            >
+            <a
+             href="mailto:info@devstudio.com" class="contacts__link">
+             info@devstudio.com
+             </a>
+
             <a href="tel:+380961111111" class="contacts__link"
               >+38 096 111 11 11</a
             >
@@ -51,7 +53,9 @@
       <section class="banner">
         <h1 class="banner__title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button type="button" class="banner__button">Замовити послугу</button>
+        <button type="button" class="banner__button">
+        Замовити послугу
+      </button>
       </section>
 
       <section class="features">
@@ -64,6 +68,7 @@
                 формування позиції.
               </p>
             </li>
+
             <li class="features__item">
               <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features__text">
@@ -71,12 +76,14 @@
                 тягне у себе.
               </p>
             </li>
+
             <li class="features__item">
               <h3 class="features__title">ПЛАНУВАННЯ</h3>
               <p class="features__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
+
             <li class="features__item">
               <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features__text">
@@ -101,6 +108,7 @@
                 height="294"
               />
             </li>
+
             <li class="services__item">
               <img
                 src="./images/services--2.jpg"
@@ -110,6 +118,7 @@
                 height="294"
               />
             </li>
+
             <li class="services__item">
               <img
                 src="./images/services--3.jpg"
@@ -133,6 +142,8 @@
                 src="./images/team-1.jpg"
                 alt="team-1"
                 class="person__image"
+                width="270"
+                height="260"
               />
               <div class="person__info">
                 <h3 class="person__name">Ігор Дем'яненко</h3>
@@ -145,6 +156,8 @@
                 src="./images/team-2.jpg"
                 alt="team-2"
                 class="person__image"
+                width="270"
+                height="260"
               />
               <div class="person__info">
                 <h3 class="person__name">Ольга Рєпіна</h3>
@@ -157,6 +170,8 @@
                 src="./images/team-3.jpg"
                 alt="team-3"
                 class="person__image"
+                width="270"
+                height="260"
               />
               <div class="person__info">
                 <h3 class="person__name">Микола Тарасов</h3>
@@ -169,6 +184,8 @@
                 src="./images/team-4.jpg"
                 alt="team-4"
                 class="person__image"
+                width="270"
+                height="260"
               />
               <div class="person__info">
                 <h3 class="person__name">Михайло Єрмаков</h3>
@@ -179,7 +196,7 @@
         </div>
       </section>
     </main>
-    
+
     <footer class="footer">
       <div class="container">
         <div class="footer__content">
@@ -187,13 +204,16 @@
             <span class="logo__web">Web</span>
             Studio
           </a>
+
           <div class="contacts contacts--footer">
             <address class="contacts__address">
               м. Київ, пр-т Лесі Українки, 26
             </address>
-            <a href="mailto:info@devstudio.com" class="contacts__email"
-              >info@devstudio.com</a
-            >
+
+            <a href="mailto:info@devstudio.com" class="contacts__email">
+              info@devstudio.com
+            </a>
+
             <a href="tel:+380961111111" class="contacts__link">
               +38 096 111 11 11
             </a>
