--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
             </ul>
           </nav>
 
-          <div class="contacts header__contacts">
-            <a
-             href="mailto:info@devstudio.com" class="contacts__link">
-             info@devstudio.com
-             </a>
+          <address class="contacts header__contacts">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              info@devstudio.com
+            </a>
 
             <a href="tel:+380961111111" class="contacts__link"
               >+38 096 111 11 11</a
             >
-          </div>
+          </address>
         </div>
       </div>
     </header>
@@ -53,9 +52,7 @@
       <section class="banner">
         <h1 class="banner__title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button type="button" class="banner__button">
-        Замовити послугу
-      </button>
+        <button type="button" class="banner__button">Замовити послугу</button>
       </section>
 
       <section class="features">
@@ -205,19 +202,25 @@
             Studio
           </a>
 
-          <div class="contacts contacts--footer">
-            <address class="contacts__address">
+          <address class="contacts contacts--footer">
+            <a
+              href="https://maps.app.goo.gl/T3XTPxpPgKjb9bbu9"
+              class="
+                contacts__link contacts__link--address
+              "
+              target="_blank"
+            >
               м. Київ, пр-т Лесі Українки, 26
-            </address>
+            </a>
 
-            <a href="mailto:info@devstudio.com" class="contacts__email">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
               info@devstudio.com
             </a>
 
             <a href="tel:+380961111111" class="contacts__link">
               +38 096 111 11 11
             </a>
-          </div>
+          </address>
         </div>
       </div>
     </footer>
