--- a/portfolio.html
+++ b/portfolio.html
@@ -185,19 +185,33 @@
     </main>
     
     <footer class="footer">
-      <a href="/" class="logo">WebStudio</a>
-      <div class="contacts footer__contacts">
-        <address 
-        class="contacts__address">
-          м. Київ, пр-т Лесі Українки, 26
-        </address>
+      <div class="container">
+        <div class="footer__content">
+          <a href="/" class="logo footer__logo">
+            <span class="logo__web">Web</span>
+            Studio
+          </a>
 
-        <a href="mailto:info@devstudio.com" class="contacts__email">
-          info@devstudio.com
-        </a>
-        <a href="tel:+380961111111" class="contacts__link">
-          +38 096 111 11 11
-        </a>
+          <address class="contacts contacts--footer">
+            <a
+              href="https://maps.app.goo.gl/T3XTPxpPgKjb9bbu9"
+              class="
+                contacts__link contacts__link--address
+              "
+              target="_blank"
+            >
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              info@devstudio.com
+            </a>
+
+            <a href="tel:+380961111111" class="contacts__link">
+              +38 096 111 11 11
+            </a>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
